@startuml HighLevel_UML

interface IExplorerRaid
interface AlgorithmSelector
interface ResultAcknowledger
interface ScanParsing

class Compass
class DefaultResultAcknowledger implements ResultAcknowledger
class Drone
class Echoer
class Explorer implements IExplorerRaid 
class Location
class MapMaker 
class PrimaryAlgorithm implements AlgorithmSelector
class Runner
class ScanParser implements ScanParsing
class Tracker

enum State
enum Heading

Compass ..> Heading

Drone ..> State

Explorer --> "1" Echoer
Explorer --> "1" Drone
Explorer --> Compass
Explorer ..> ScanParsing
Explorer --> "1" Tracker
Explorer ..> AlgorithmSelector
Explorer ..> ResultAcknowledger

MapMaker --> Compass
MapMaker *-- Explorer
MapMaker ..> Heading

PrimaryAlgorithm --> Location

ResultAcknowledger ..> State

Runner - Explorer

@enduml